# createstudio

./: .gitignore  README.md  oreateai-home.json  oreateai-indexjs.json  oreateai-indexjs.txt  oreateai-mainjs.txt  package.json  test_ai_video_motion.py  test_oreateai.py  test_results.json  wails.json  worklog.md
backend/: api_client.go  api_client_patch.go  go.mod  wails.json
captured-js/: ChatArea.js  common-Dr_MxyLk.js  delivery-callback.js  home.js  index-BwzlvbL0.js  index-C8DB0_6Z.js  index-Ci2q4-cN.js  index-CrJNdmtL.js  index-DX4DGIXl.js
oreateai-video-tool/: .gitignore  wails.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tool-results/: bash_1783750102340_376cd8dbc667.txt  bash_1783750387758_ef0e9d0d5a63.txt  bash_1783750514366_8148a1a880f4.txt  bash_1783750798786_ee3c144fc6fb.txt  bash_1783836702587_7bd8655378d9.txt  bash_1783922033705_427813fe4552.txt  bash_1783935210824_56e95de8597d.txt  bash_1783996106122_fbfeac46168e.txt  bash_1784000699993_e2003eba801e.txt  bash_1784081342176_a440073b4ac8.txt  grep_1783836651535_42f28c64d1f4.txt  grep_1783836663493_30ed9759c010.txt  grep_1783836741506_5b8d1d8ca984.txt  grep_1783836756217_3ad4d77a02bd.txt  grep_1783836777170_6e58c71632b2.txt  grep_1783909754682_278b41105794.txt  grep_1783909763244_efe1d6264471.txt  grep_1783922345975_7728be7b1109.txt  grep_1783923054711_ab90d1d8cd9b.txt  read_1783752933239_1bb79da1bb48.txt  read_1783752938188_17969300edfc.txt  read_1783758144881_4bb96ccc17ad.txt  read_1783777093904_6505ce236b74.txt  (+47 more)
(+35 files in other folders)
