[package]
name = "createstudio"
version = "0.2.0"
description = "OreateAI Studio - AI Video Generation Desktop App"
authors = ["chillbeats182"]
edition = "2021"

[lib]
name = "createstudio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"